<resources>
    <string name="app_name">食物练</string>

    <string name="fire_broadcast">新微播</string>
    <string name="retrieve_broadcast">收微播</string>
    <string name="action_settings">Settings</string>
    <!--<string name="base_uri">http://192.168.1.103:8080</string>-->
    <string name="title_activity_broadcast">新微播--喊一嗓子 让周围知道</string>
    <string name="send_broadcast">发送</string>
    <string name="send_toast">已发送</string>
    <string name="tv_brief">概述</string>
    <string name="tv_description">具体信息</string>
    <string name="tv_expireDate">信息过期时间</string>
    <string name="progress_dialog">刷新 请稍等...</string>
    <string name="btn_back">返回</string>
    <string name="menu_interest_broadcast">找兴趣</string>
    <string name="toolbar_myself">我</string>
    <string name="menu_home_page">首页</string>
    <string name="menu_friends">朋友</string>
    <string name="menu_fire_broadcast">发消息</string>
    <string name="menu_retrieve_broadcast">收消息</string>
    <string name="menu_near_by">周边</string>
    <string name="menu_radar">雷达</string>
    <string name="scan">扫描</string>
    <string name="menu_myself">我</string>
    <string name="menu_follows">关注</string>
    <string name="toolbar_search">发现</string>
    <string name="toolbar_locate">定位</string>
    <string name="toolbar_list">列表</string>
    <string name="brief_hint">信息标题--简短的描述信息概括</string>
    <string name="content_hint">信息内容</string>
    <string name="date_time_picker_intro1">请为信息选择过期时间，默认过期时间为24小时</string>
    <string name="date_time_picker_intro2">过期后不再标注地图，仍可在“我的信息”中找到</string>
    <string name="change_time">更改时间</string>
    <string name="change_date">更改日期</string>
    <string name="add_tags">添加标签</string>
    <string name="add_quantity">添加数量</string>
    <string name="tags_selector_title">请给信息选择标签，最多选择五个标签</string>
    <string name="reserve">预定</string>
    <string name="make_call">一键拨号</string>
    <string name="send_message">私聊</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>
    <string name="phone">电话</string>
    <string name="login">登陆</string>
    <string name="register">免费注册</string>
    <string name="logout">注销</string>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_broadcast_info">BroadcastInfoActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="infowindow_contentDesc">portrait</string>
    <string name="title_activity_date_time_picker">DateTimePickerActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_user_home_page">UserHomePageActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_new_broadcast">NewBroadcastActivity</string>
</resources>
