<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never|withText"
        android:icon="@drawable/perm_group_system_tools"/>

    <item android:id="@+id/toolbar_search" android:title="@string/toolbar_search"
        android:orderInCategory="1" app:showAsAction="always|withText"
        android:icon="@drawable/search_light_24"/>
    <item android:id="@+id/toolbar_list" android:title="@string/toolbar_list"
        android:orderInCategory="2" app:showAsAction="always|withText"
        android:icon="@drawable/list_light24"/>
    <item android:id="@+id/toolbar_myself" android:title="@string/toolbar_myself"
        android:orderInCategory="2" app:showAsAction="always|withText"
        android:icon="@drawable/light_myself24"/>




</menu>
