<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.skyline.trumpet.trumpetapp.BroadcastActivity"
    style="@style/layout_full">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="vertical"
        android:layout_weight="0.7"
        style="@style/layout_vertical">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/broadcastToolbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffdddedc"
            android:layout_gravity="center_horizontal"
            style="@style/layout_full" />
        <!--
            <ListView
                android:id="@+id/listViewBrowse"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
     -->
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="vertical"
        android:layout_weight="8.3"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        style="@style/layout_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tv_brief"
            android:id="@+id/tv_brief"
            style="@style/layout_vertical"
            android:layout_weight="0.3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/et_briefContent"
            style="@style/layout_vertical"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tv_description"
            android:id="@+id/tv_description"
            android:layout_weight="0.3"
            style="@style/layout_vertical" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/et_descriptionContent"
            style="@style/layout_vertical"
            android:layout_weight="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/date_time_picker_intro1"
        android:id="@+id/textView10"
        android:textIsSelectable="false"
        android:textSize="8dp"
        android:layout_weight="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/date_time_picker_intro2"
        android:id="@+id/textView11"
        android:textSize="8dp"
        android:layout_weight="0.1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/layout_vertical"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:text="@string/tv_expireDate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_expire_date"
            android:textColor="@color/highlightColor" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/layout_horizontal"
                android:layout_weight="1"
                android:id="@+id/ll_change_time"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_timePicker"
                    android:background="@drawable/ic_time_picker"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_time"
                    android:id="@+id/textView13"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/layout_horizontal"
                android:layout_weight="1"
                android:id="@+id/ll_sendBroadcast"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    style="@style/layout_horizontal"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_broadcast"
                        android:id="@+id/btn_sendBroadcast"
                        android:layout_marginLeft="50dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="0px"
        style="@style/layout_vertical"
        android:layout_weight="1"
        android:gravity="bottom">

        <include layout="@layout/foot" />
    </LinearLayout>

</LinearLayout>


