<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="com.skyline.trumpet.trumpetapp.BroadcastFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        style="@style/layout_full">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            style="@style/layout_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tv_brief"
                android:id="@+id/tv_brief"
                style="@style/layout_vertical"
                android:layout_weight="0.4" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/et_briefContent"
                style="@style/layout_vertical"
                android:layout_weight="1.4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tv_description"
                android:id="@+id/tv_description"
                android:layout_weight="0.4"
                style="@style/layout_vertical" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/et_descriptionContent"
                style="@style/layout_vertical"
                android:layout_weight="2.4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/date_time_picker_intro1"
                android:id="@+id/textView10"
                android:textIsSelectable="false"
                android:textSize="8dp"
                android:layout_weight="0.1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/date_time_picker_intro2"
                android:id="@+id/textView11"
                android:textSize="8dp"
                android:layout_weight="0.1" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/layout_vertical"
                android:layout_weight="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:text="@string/tv_expireDate" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    style="@style/layout_vertical"
                    android:layout_weight="1.5">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_expire_date"
                        android:textColor="@color/highlightColor"
                        style="@style/layout_horizontal"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        style="@style/layout_horizontal"
                        android:layout_weight="1"
                        android:id="@+id/ll_change_time">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_timePicker"
                            android:background="@drawable/ic_time_picker"
                            android:layout_gravity="center_vertical" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_time"
                            android:id="@+id/textView13"
                            android:layout_gravity="center_vertical" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7.5"
                    style="@style/layout_vertical"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/layout_horizontal"
                            android:layout_weight="1"
                            android:id="@+id/ll_adding_tag">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/imageView3"
                                android:src="@drawable/ic_tag24" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_tags"
                                android:id="@+id/tv_selectedTagsLabel"
                                android:layout_gravity="center_vertical" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_selected_tags"
                            android:layout_marginLeft="10dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView4"
                            android:src="@drawable/ic_quantity24"
                            android:layout_gravity="center_vertical" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_quantity"
                            android:id="@+id/textView12" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/et_quantity" />
                    </LinearLayout>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_broadcast"
                        android:id="@+id/btn_sendBroadcast"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:enabled="false" />

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>


</FrameLayout>
